components/networking/tailscale/tailscale.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
